# rust-xplane

./: .dir-locals.el  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml
.cargo/: config.toml  nextest.toml
.github/workflows/: lint.yml  rust.yml
.reuse/: dep5
LICENSES/: LicenseRef-DCO.txt
examples/: dataref.rs  menus.rs  minimal.rs
guide/: book.toml
guide/src/: README.md  SUMMARY.md
guide/src/guide/: getting_started.md
guide/src/misc/: contributors.md
src/: avionics.rs  camera.rs  command.rs  draw.rs  error.rs  feature.rs  ffi.rs  flight_loop.rs  geometry.rs  internal.rs  lib.rs  menu.rs  message.rs  navigation.rs  obj_instance.rs  paths.rs  player.rs  plugin_macro.rs  scenery.rs  sound.rs  state.rs  weather.rs  window.rs
src/data/: borrowed.rs  mod.rs  owned.rs  shared.rs
src/plugin/: internal.rs  management.rs  mod.rs
