[package]
authors = ["Julia DeMille <me@jdemille.com>", "Sam Crow <samcrow@uw.edu>"]
name = "xplane"
version = "0.3.1"
license = "EUPL-1.2"
repository = "https://github.com/judemille/rust-xplane"
keywords = ["X-Plane", "plugin"]
description = "High-level interfaces to the X-Plane plugin SDK"
readme = "README.md"
edition = "2021"
rust-version = "1.72"
categories = ["API bindings", "Game development"]

[dependencies]
xplane-sys = "4.0.101"
thiserror = "1.0"
num_enum = "0.7"
slotmap = "1.0"

[features]
XPLM400 = ["XPLM303", "xplane-sys/XPLM400"]
XPLM303 = ["XPLM301", "xplane-sys/XPLM303"]
XPLM301 = ["XPLM300", "xplane-sys/XPLM301"]
XPLM300 = ["XPLM210", "xplane-sys/XPLM300"]
XPLM210 = ["xplane-sys/XPLM210"]

[profile.release]
lto = true

[profile.dev]
opt-level = 1

[[example]]
name = "minimal"
crate-type = ["cdylib"]

[[example]]
name = "dataref"
crate-type = ["cdylib"]

[[example]]
name = "menus"
crate-type = ["cdylib"]
