# SPDX-FileCopyrightText: 2024 Julia DeMille <me@jdemille.com>
#
# SPDX-License-Identifier: MPL-2.0

[package]
authors = ["Julia DeMille <me@jdemille.com>", "Sam Crow <samcrow@uw.edu>"]
name = "xplane"
version = "0.1.0-alpha.1"
license = "MPL-2.0"
repository = "https://git.sr.ht/~jdemille/xplane.rs"
keywords = ["X-Plane", "plugin"]
description = "High-level interfaces to the X-Plane plugin SDK"
readme = "README.md"
edition = "2021"
rust-version = "1.76"
categories = ["api-bindings", "game-development"]

[dependencies]
libfmod = { version = "~2.206", optional = true }
num_enum = "~0.7"
snafu = "~0.7"
tailcall = "~0.1"
xplane-sys = { version = ">= 4.0.105, < 4.1.0" }

[dev-dependencies]
mockall = "~0.12"
xplane-sys = { version = ">= 4.0.105, < 4.1.0", features = ["mockall"] }

[features]
XPLM400 = ["XPLM303", "xplane-sys/XPLM400"]
XPLM303 = ["XPLM302", "xplane-sys/XPLM303"]
XPLM302 = ["XPLM301", "xplane-sys/XPLM301"]
XPLM301 = ["XPLM300", "xplane-sys/XPLM301"]
XPLM300 = ["XPLM210", "xplane-sys/XPLM300"]
XPLM210 = ["xplane-sys/XPLM210"]
stub-linux = ["xplane-sys/stub-linux"]
fmod = ["dep:libfmod", "XPLM400", "xplane-sys/fmod"]

[profile.release]
lto = true

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
cargo = "warn"
float_cmp_const = "deny"
self_named_module_files = "deny"
semicolon_inside_block = "deny"
todo = "warn"
try_err = "deny"
lossy_float_literal = "deny"
multiple_crate_versions = "allow"
module_name_repetitions = "allow"

[[example]]
name = "minimal"
crate-type = ["cdylib"]

[[example]]
name = "dataref"
crate-type = ["cdylib"]

[[example]]
name = "menus"
crate-type = ["cdylib"]

[package.metadata.docs.rs]
features = ["XPLM400"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
